--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Variables en JavaScript</title>
+</head>
+<body>
+    <script>
+        //Declaración de variables
+        let nombre ="Pablo"; //string-cadena de caracteres
+        let edad = 45; //numérico
+        let esEstudiante = true; //booleana
+        
+        //Imprimir en consola
+        console.log("Nombre: ",nombre);
+        console.log("Edad: ",edad);
+        console.log("Es estudiante: ",esEstudiante);
 
+    </script>
+</body>
+</html>
