--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         console.log("Nombre: ",nombre);
         console.log("Edad: ",edad);
         console.log("Es estudiante: ",esEstudiante);
+        
+        //Imprimir en página
+        document.write("Nombre en página: ",nombre);
+        document.write("Edad en página: ",edad);
+        document.write("Es estudiante en página: ",esEstudiante);
 
     </script>
 </body>
