--- a/operadorLogico.html
+++ b/operadorLogico.html
@@ -11,7 +11,7 @@
         let tienePermiso= false;
         let puedeEntrar = esAdulto && tienePermiso;
 
-        document.write("Puede entrar ", puedeEntrar);
+        document.write("Puede entrar: ", puedeEntrar);
     </script>
 </body>
 </html>
