--- a/labParte3.html
+++ b/labParte3.html
@@ -6,13 +6,14 @@
     <title>Laboratorio parte 3</title>
 </head>
 <body>
-    let esMayorDeEdad = false;
-    let tieneLicencia = true;
+    <script>
+        let esMayorDeEdad = false;
+        let tieneLicencia = true;
 
-    let puedeConducir= esMayorDeEdad && tieneLicencia;
-    console.log("Puede conducir?",puedeConducir);
-    let errorDeConducir = esMayorDeEdad || tieneLicencia;
-    console.log("Puede conducir con errores?",errorDeConducir);
-
+        let puedeConducir= esMayorDeEdad && tieneLicencia;
+        console.log("Puede conducir?",puedeConducir);
+        let errorDeConducir = esMayorDeEdad || tieneLicencia;
+        console.log("Puede conducir con errores?",errorDeConducir);
+    </script>
 </body>
 </html>
