--- a/labParte4.html
+++ b/labParte4.html
@@ -11,7 +11,8 @@
         let edad = parseInt(prompt("Ingrese su edad: "));
         let eresEstudiante = prompt("Eres estudiante si/no").toLowerCase()=="si";
         
-        console.log("Hola", nombre, "Su edad es ", edad, "años");
+        //console.log("Hola", nombre, "Su edad es ", edad, "años");
+        console.log(`Hola ${nombre}, su edad es ${edad} años.`);
         if(edad >= 18){
             console.log("Usted es mayor de edad");
         }else {
